tests/parser/statement_write_err.expected
Syntax Error: line 5:
Unexpected token (TOK_KEY_END, 'end'), expected a token type of:  
  'TOK_COMMA'
