tests/parser/statement_write_err.mtp
begin
	(*write statement: *)
	write(something

end
.